[gd_scene load_steps=2 format=3 uid="uid://sy7mkdccd2pe"]

[ext_resource type="Script" path="res://scenes/AllGUIs.gd" id="1_x5ke5"]

[node name="AllGUIs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5ke5")

[node name="GUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 83.0
offset_bottom = -68.0
grow_vertical = 2

[node name="StoneLabel" type="Label" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.228916
anchor_top = 0.122297
anchor_right = 0.891566
anchor_bottom = 0.167358
grow_horizontal = 0
grow_vertical = 2
text = "0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="GUI/StoneLabel"]
layout_mode = 1
offset_left = -17.0
offset_top = -21.0
offset_right = 38.0
offset_bottom = 5.0
text = "Piedra:"

[node name="WoodLabel" type="Label" parent="GUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -154.0
offset_right = -10.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 2
text = "0"
horizontal_alignment = 2

[node name="Label" type="Label" parent="GUI/WoodLabel"]
layout_mode = 1
offset_left = -16.0
offset_top = -23.0
offset_right = 48.0
offset_bottom = 3.0
text = "Madera:"

[node name="ColorRect" type="ColorRect" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.578698, 0.300179, 0.313726)
metadata/_edit_lock_ = true

[node name="RightGUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -245.0
offset_bottom = 159.0
grow_horizontal = 0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="RightGUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "FPS: "
horizontal_alignment = 2

[node name="CentralGUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -373.0
offset_top = -88.0
offset_right = 373.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CentralGUI"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -19.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Este texto que queremos mostrar
con dos l√≠neas distintas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CentralGUI/Label"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -41.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.482353, 0.482353, 0.482353, 0.313726)

[node name="DisappearTimer" type="Timer" parent="CentralGUI"]
one_shot = true

[node name="DownGUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="DownGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.578698, 0.300179, 0.313726)
metadata/_edit_lock_ = true

[node name="ActionLabel" type="Label" parent="DownGUI"]
layout_mode = 0
offset_left = 27.0
offset_top = 24.0
offset_right = 592.0
offset_bottom = 50.0
text = "-"

[connection signal="timeout" from="CentralGUI/DisappearTimer" to="." method="_on_disappear_timer_timeout"]
